--- a/blogs/test.html
+++ b/blogs/test.html
@@ -95,6 +95,9 @@
             </div>
         </div>
     </footer>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "e2b32fce49024fc783c7b893be35bb82"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
