--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- THis part is for the introduction title -->
         <div class="welcome-title">
             <h1>Navigating Game Development: A Beginner's Journey</h1>
-            <h2>A biweekly blog documenting my Defold newbie game development adventures </h2>
+            <h2>A biweekly blog documenting my newbie game development adventures </h2>
         </div>
     </header>
     <main>
