--- a/pages/about.html
+++ b/pages/about.html
@@ -60,7 +60,6 @@
                     with
                     interest in
                     game development
-                    using Defold
                     .
                 </p>
             </div>
@@ -74,7 +73,7 @@
             <details class="accordion">
                 <summary>What type of people do I aim for ? </summary>
                 <p>
-                    Anyone who enjoys reading about Defold or anyone who finds himself in a similar position in his own
+                    Anyone who enjoys reading about game dev or anyone who finds himself in a similar position in his own
                     game dev
                     journey .
                 </p>
