--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
     <title>GameDevBirds</title>
     <meta name="title" content="GameDevBirds" />
     <meta name="description"
-        content="A biweekly blog about my Journey learning game development on the side while diving into web development."" />
+        content="A biweekly blog about my Journey learning game development on the side while diving into web development." />
     <link rel=" icon" href="../assets/images/site_images/icon.png" type="image/png" />
     <link rel="stylesheet" href="../assets/css/normalize-css/modern-normalize.css" />
     <link rel="stylesheet" href="../assets/css/page_styles.css" />
@@ -43,7 +43,9 @@
                     <li>
                         <a href="../pages/about.html" class="minimal-anchors ">about</a>
                     </li>
-
+                    <li>
+                        <a href="../ar/index.html" class="minimal-anchors ">AR</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -73,7 +75,8 @@
             <details class="accordion">
                 <summary>What type of people do I aim for ? </summary>
                 <p>
-                    Anyone who enjoys reading about game dev or anyone who finds himself in a similar position in his own
+                    Anyone who enjoys reading about game dev or anyone who finds himself in a similar position in his
+                    own
                     game dev
                     journey .
                 </p>
