--- a/ar/index.html
+++ b/ar/index.html
@@ -41,7 +41,7 @@
                         <a href="../index.html" class="minimal-anchors ">الرئيسية</a>
                     </li>
                     <li>
-                        <a href="../pages/about.html" class="minimal-anchors ">عني</a>
+                        <a href="../ar/pages/about.html" class="minimal-anchors ">عني</a>
                     </li>
                     <li>
                         <a href="../index.html" class="minimal-anchors ">EN</a>
