--- a/pages/about.html
+++ b/pages/about.html
@@ -43,9 +43,6 @@
                     <li>
                         <a href="../pages/about.html" class="minimal-anchors ">about</a>
                     </li>
-                    <li>
-                        <a href="../ar/index.html" class="minimal-anchors ">AR</a>
-                    </li>
                 </ul>
             </div>
         </nav>
@@ -57,36 +54,37 @@
             <div class="center">
                 <img src="https://avatars.githubusercontent.com/u/132617733?v=4" alt="ali-al-khawaja"
                     style="border-radius: 50%; width: 200px;">
-                <p> Hi, I'm Ali, I write GDB blogs, also a software development student studying web
-                    development
-                    with
-                    interest in
-                    game development
-                    .
+                <p> Hi, I'm Ali. I write about game development, web development, Ubuntu, and a variety of other topics.
+                    I'm also a software
+                    development student.
+
                 </p>
             </div>
             <h1 class="center">FAQ</h1>
             <details class="accordion">
-                <summary>Why every 2 weeks and not daily or at least every week ?</summary>
+                <summary>How often do you publish new content?
+                </summary>
                 <p>
-                    Because , I'm studying web dev mainly and game development is just a hobby until future surprises !
-                </p>
+                    I publish new posts whenever I have something interesting to share, so the frequency may vary. </p>
             </details>
             <details class="accordion">
                 <summary>What type of people do I aim for ? </summary>
                 <p>
-                    Anyone who enjoys reading about game dev or anyone who finds himself in a similar position in his
+                    Mainly anyone who enjoys reading about game dev or anyone who finds himself in a similar position in
+                    his
                     own
                     game dev
                     journey .
                 </p>
             </details>
             <details class="accordion">
-                <summary>why birds?</summary>
+                <summary>Do you accept guest posts?</summary>
                 <p>
-                    Hmm, it's for a future expectations.
+                    Currently, I am not accepting guest posts, but I appreciate your interest!
+                    .
                 </p>
             </details>
+
         </section>
         <!-- THIS IS CONTACT US SECTION -->
         <section class="text-content" id="contactUs">
