--- a/index.html
+++ b/index.html
@@ -43,17 +43,16 @@
                     <li>
                         <a href="./pages/about.html" class="minimal-anchors ">about</a>
                     </li>
-                    <li>
-                        <a href="ar/index.html" class="minimal-anchors ">AR</a>
-                    </li>
                 </ul>
             </div>
         </nav>
         <!-- THis part is for the introduction title -->
         <div class="welcome-title">
-            <h1>Navigating Game Development: A Beginner's Journey</h1>
-            <h2>A biweekly blog documenting my newbie game development adventures </h2>
+            <h1>Exploring Development: Games, Web, and More</h1>
+            <h2>A blog sharing my experiences in game development, web development, and a mix of random topics</h2>
         </div>
+
+
     </header>
     <main>
         <section class="text-content blog-posts">
