remove template blogs

--- a/index.html
+++ b/index.html
@@ -56,45 +56,23 @@
     </header>
     <main>
         <section class="text-content blog-posts">
-            <a href="blogs/test.html" class="minimal-anchors">
+            <a href="blogs/nvidiawithubuntu.html" class="minimal-anchors">
                 <div class="blogPostCard">
                     <div class="blogPostBackground">
-                        <img src="assets/images/blogsBG/Untitled.avif" alt="" class="blogThumbnail">
+                        <img src="assets/images/blogsBG/firstpost.webp" alt="" class="blogThumbnail">
                     </div>
                     <div class="blogTitle">
-                        <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">Lorem ipsum
-                            dolor sit amet,
-                            consectetur adipiscing
+                        <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">
+                            How to prepare your Ubuntu laptop for a gaming session ?
                         </h1>
                         <p style="color: darkgray; margin-top: 5px !important; line-height: 1.5; font-size: large;">
-                            Lorem ipsum dolor sit
-                            amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam
-                            aliquam quaerat voluptatem. Ut enim aeque doleamus animo,
+                            Full simple and beginner friendly guide on how to set up your Nvidia graphics card with
+                            Ubuntu operating system for gaming using, tested by trail and error .
                         </p>
                     </div>
                 </div>
             </a>
-            <hr>
-            <a href="blogs/test.html" class="minimal-anchors">
-                <div class="blogPostCard">
-                    <div class="blogPostBackground">
-                        <img src="assets/images/blogsBG/Untitled5.avif" alt="" class="blogThumbnail">
-                    </div>
-                    <div class="blogTitle">
-                        <h1 style="margin-bottom: 0px !important; line-height: normal;  font-size: xx-large;">Lorem
-                            ipsum dolor sit amet,
-                            consectetur adipiscing
-                        </h1>
-                        <p style="color: darkgray; margin-top: 5px !important; line-height: 1.5; font-size: large;">
-                            Lorem ipsum dolor sit
-                            amet, consectetur
-                            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnam
-                            aliquam quaerat voluptatem. Ut enim aeque doleamus animo,
-                        </p>
-                    </div>
-                </div>
-            </a>
+            <!-- <hr> -->
         </section>
     </main>
     <footer>
