update to the new name

--- a/blogs/nvidiawithubuntu.html
+++ b/blogs/nvidiawithubuntu.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" name="type" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>GameDevBirds</title>
-    <meta name="title" content="GameDevBirds" />
+    <title>AliDevLog</title>
+    <meta name="title" content="AliDevLog" />
     <meta name="description"
         content="A biweekly blog about my Journey learning game development on the side while diving into web development."" />
     <link rel=" icon" href="../assets/images/site_images/icon.png" type="image/png" />
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../index.html" class="minimal-anchors">GameDevBirds</a>
+                        <a href="../index.html" class="minimal-anchors">AliDevLog</a>
                     </li>
                 </ul>
             </div>
@@ -124,7 +124,7 @@
             </blockquote>
             <p>note: you can set the graphics quality for OpenGL in the NVIDIA app</p>
             <p>see you later . 👋</p>
-            <script src="https://giscus.app/client.js" data-repo="Ali-Al-Khuwaja/GameDevBirds"
+            <script src="https://giscus.app/client.js" data-repo="Ali-Al-Khuwaja/AliDevLog"
                 data-repo-id="R_kgDON2vgDA" data-category="General" data-category-id="DIC_kwDON2vgDM4ComHp"
                 data-mapping="pathname" data-strict="0" data-reactions-enabled="1" data-emit-metadata="0"
                 data-input-position="bottom" data-theme="preferred_color_scheme" data-lang="en" data-loading="lazy"
