update page analytics

--- a/blogs/nvidiawithubuntu.html
+++ b/blogs/nvidiawithubuntu.html
@@ -124,11 +124,10 @@
             </blockquote>
             <p>note: you can set the graphics quality for OpenGL in the NVIDIA app</p>
             <p>see you later . 👋</p>
-            <script src="https://giscus.app/client.js" data-repo="Ali-Al-Khuwaja/AliDevLog"
-                data-repo-id="R_kgDON2vgDA" data-category="General" data-category-id="DIC_kwDON2vgDM4ComHp"
-                data-mapping="pathname" data-strict="0" data-reactions-enabled="1" data-emit-metadata="0"
-                data-input-position="bottom" data-theme="preferred_color_scheme" data-lang="en" data-loading="lazy"
-                crossorigin="anonymous" async>
+            <script src="https://giscus.app/client.js" data-repo="Ali-Al-Khuwaja/AliDevLog" data-repo-id="R_kgDON2vgDA"
+                data-category="General" data-category-id="DIC_kwDON2vgDM4ComHp" data-mapping="pathname" data-strict="0"
+                data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom"
+                data-theme="preferred_color_scheme" data-lang="en" data-loading="lazy" crossorigin="anonymous" async>
                 </script>
         </article>
 
@@ -148,7 +147,7 @@
     </footer>
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
-        data-cf-beacon='{"token": "e2b32fce49024fc783c7b893be35bb82"}'></script><!-- End Cloudflare Web Analytics -->
+        data-cf-beacon='{"token": "11ffea77b5d6463b91d93d06bc02c664"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
