fix grammatical error

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" name="type" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>AliDevLog</title>
-    <meta name="title" content="AliDevLog" />
+    <title>Ali's DevLog</title>
+    <meta name="title" content="Ali's DevLog" />
     <meta name="description"
         content="A biweekly blog about my Journey learning game development on the side while diving into web development." />
     <link rel=" icon" href="../assets/images/site_images/icon.png" type="image/png" />
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="../index.html" class="minimal-anchors">AliDevLog</a>
+                        <a href="../index.html" class="minimal-anchors">Ali's DevLog</a>
                     </li>
                 </ul>
             </div>
