--- a/index.html
+++ b/index.html
@@ -62,6 +62,22 @@
                         <img src="assets/images/blogsBG/firstpost.webp" alt="" class="blogThumbnail">
                     </div>
                     <div class="blogTitle">
+                        <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">Optimizing
+                            Power usage on Ubuntu Laptops with NVIDIA GPUs</h1>
+                        <p style="color: darkgray; margin-top: 5px !important; line-height: 1.5; font-size: large;">A
+                            Step-by-Step Guide for Ubuntu Newbies to Configure Power Settings, improve Battery
+                            Life, and Navigate GPU Management quirks</p>
+                    </div>
+                </div>
+            </a>
+
+            <a href="blogs/UbuntuPowerManagement.html" class="minimal-anchors">
+                <div class="blogPostCard">
+                    <div class="blogPostBackground">
+                        <img src="assets/images/blogsBG/ubuntupower.webp" alt="Ubuntu power management profiles"
+                            class="blogThumbnail">
+                    </div>
+                    <div class="blogTitle">
                         <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">
                             How to prepare your Ubuntu laptop for a gaming session ?
                         </h1>
