Update alt data

--- a/blogs/nvidiawithubuntu.html
+++ b/blogs/nvidiawithubuntu.html
@@ -8,7 +8,7 @@
     <title>Ali's DevLog</title>
     <meta name="title" content="Ali's DevLog" />
     <meta name="description"
-        content="A biweekly blog about my Journey learning game development on the side while diving into web development."" />
+        content="A blog sharing my experiences in game development, web development, and a mix of random topics" />
     <link rel=" icon" href="../assets/images/site_images/icon.png" type="image/png" />
     <link rel="stylesheet" href="../assets/css/normalize-css/modern-normalize.css" />
     <link rel="stylesheet" href="../assets/css/page_styles.css" />
@@ -27,7 +27,8 @@
                 <ul>
                     <li>
                         <a href="../index.html">
-                            <img src="../assets/images/site_images/icon.png" alt="project birds logo" class="logo" />
+                            <img src="../assets/images/site_images/icon.png" alt="Ali's DevLog site logo"
+                                class="logo" />
                         </a>
                     </li>
                     <li>
@@ -141,7 +142,8 @@
             </p>
             <div>
                 <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en"><img
-                        src="../assets/images/site_images/by-nc-sa.svg" alt="cc-logo" /></a>
+                        src="../assets/images/site_images/by-nc-sa.svg"
+                        alt="Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License logo" /></a>
             </div>
         </div>
     </footer>
