--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
             <a href="blogs/nvidiawithubuntu.html" class="minimal-anchors">
                 <div class="blogPostCard">
                     <div class="blogPostBackground">
-                        <img src="assets/images/blogsBG/firstpost.webp" alt="" class="blogThumbnail">
+                        <img src="assets/images/blogsBG/firstpost.webp" alt="Nvidia and ubuntu logo" class="blogThumbnail">
                     </div>
                     <div class="blogTitle">
-                        <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">Optimizing
-                            Power usage on Ubuntu Laptops with NVIDIA GPUs</h1>
-                        <p style="color: darkgray; margin-top: 5px !important; line-height: 1.5; font-size: large;">A
-                            Step-by-Step Guide for Ubuntu Newbies to Configure Power Settings, improve Battery
-                            Life, and Navigate GPU Management quirks</p>
+                        <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">How to
+                            prepare your Ubuntu laptop for a gaming session ?</h1>
+                        <p style="color: darkgray; margin-top: 5px !important; line-height: 1.5; font-size: large;">Full
+                            simple and beginner friendly guide on how to set up your Nvidia graphics card with Ubuntu
+                            operating system for
+                            gaming using, tested by trail and error .</p>
                     </div>
                 </div>
             </a>
@@ -78,13 +79,11 @@
                             class="blogThumbnail">
                     </div>
                     <div class="blogTitle">
-                        <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">
-                            How to prepare your Ubuntu laptop for a gaming session ?
-                        </h1>
+                        <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">Optimizing
+                            Power usage on Ubuntu Laptops with NVIDIA GPUs</h1>
                         <p style="color: darkgray; margin-top: 5px !important; line-height: 1.5; font-size: large;">
-                            Full simple and beginner friendly guide on how to set up your Nvidia graphics card with
-                            Ubuntu operating system for gaming using, tested by trail and error .
-                        </p>
+                            A Step-by-Step Guide for Ubuntu Newbies to Configure Power Settings, improve Battery
+                            Life, and Navigate GPU Management quirks</p>
                     </div>
                 </div>
             </a>
