--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Ali's DevLog</title>
     <meta name="title" content="Ali's DevLog" />
+    <meta name="theme-color" content="#6DB33F" />
     <meta name="description"
         content="A biweekly blog about my Journey learning game development on the side while diving into web development." />
     <link rel=" icon" href="assets/images/site_images/icon.png" type="image/png" />
