--- a/blogs/nvidiawithubuntu.html
+++ b/blogs/nvidiawithubuntu.html
@@ -7,6 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Ali's DevLog</title>
     <meta name="title" content="Ali's DevLog" />
+    <meta name="theme-color" content="#6DB33F" />
     <meta name="description"
         content="A blog sharing my experiences in game development, web development, and a mix of random topics" />
     <link rel=" icon" href="../assets/images/site_images/icon.png" type="image/png" />
