change a css rule and revert to the old theme color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Primary Meta Tags -->
     <title>Ali's DevLog</title>
     <meta name="title" content="Ali's DevLog" />
-    <meta name="theme-color" content="#53D13B" />
+    <meta name="theme-color" content="#6DB33F" />
     <meta name="description"
         content="A biweekly blog about my Journey learning game development on the side while diving into web development." />
     <link rel=" icon" href="assets/images/site_images/icon.png" type="image/png" />
@@ -56,11 +56,12 @@
 
     </header>
     <main>
-        <section class="text-content blog-posts">
+        <section class="text-content blog-posts" style="gap: 32px;">
             <a href="blogs/nvidiawithubuntu.html" class="minimal-anchors">
                 <div class="blogPostCard">
                     <div class="blogPostBackground">
-                        <img src="assets/images/blogsBG/firstpost.webp" alt="Nvidia and ubuntu logo" class="blogThumbnail">
+                        <img src="assets/images/blogsBG/firstpost.webp" alt="Nvidia and ubuntu logo"
+                            class="blogThumbnail">
                     </div>
                     <div class="blogTitle">
                         <h1 style="margin-bottom: 0px !important; line-height: normal; font-size: xx-large;">How to
